--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a class="list-anchor" href="">Members</a>
             </div class="jump">
             <div class="joinnn">
-                <a target="_blank" class="list-anchor join-us" id="join-it"  href="https://github.com/Sachin-Chandela">Join Us</a>
+                <a target="_blank" class="list-anchor join-us" id="join-it"  href="https://www.linkedin.com/company/aiche-bits-pilani-student-chapter/">Join Us</a>
             </div>
 
         </div>
@@ -105,7 +105,7 @@
                 
                 </div>
             <div class="bottom shake-top">
-                <a target="_blank" class="second-join " href="https://github.com/Sachin-Chandela">Join Us</a>
+                <a target="_blank" class="second-join " href="https://www.linkedin.com/company/aiche-bits-pilani-student-chapter/">Join Us</a>
             </div>
             
 
